test/pos/test00a.msmt_
; Sorts


; Constants




; Uninterpreted Functions


; Qualifiers
(qualif Zog ((v @a0)) (<= 10 v))

; Well-formedness Constraints
(wf $k0 ((lq_karg$v##k0 Int)))

;  Constraints
(constraint (forall ((x Int)) (=> (= x 10) ($k0 x))))
(constraint (forall ((y Int)) (=> (= y 20) ($k0 y))))
(constraint (forall ((z Int)) (=> ($k0 z) (<= 10 z))))

