test/neg/test3.msmt_
; Sorts


; Constants




; Uninterpreted Functions


; Qualifiers
(qualif Zog ((v @a0)(z @a1)) (= v z))

; Well-formedness Constraints
(wf $k0 ((lq_karg$v##k0 Int)(lq_karg$x##k0 Int)))

;  Constraints
(constraint (forall ((_VV##1 Int)(q Int)) (=> (= _VV##1 q) ($k0 _VV##1 q))))
(constraint (forall ((_VV##2 Int)(y Int)) (=> (and (= y 42) ($k0 _VV##2 y)) (= _VV##2 10))))

